CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
PROJECT(Assignement1)

SET(CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_STANDARD 11)

FIND_PACKAGE(Threads)

INCLUDE_DIRECTORIES(inc)

SET(SOURCE_FILES
  "src/UdpSocket.cpp"
  "src/main.cpp"
  "src/Receiver.cpp"
  "src/Sender.cpp"
  # "src/ChatApplication.cpp"
  )

ADD_EXECUTABLE(chat ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(chat ${CMAKE_THREAD_LIBS_INIT})
